# api_codo_maton

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  structs.rs
auth/: Cargo.toml
auth/src/: jwt_auth.rs
db/: Cargo.toml
db/src/: db_connection.rs
migration/src/: m20220101_000001_create_table.rs
queries/src/: lib.rs
