[package]
name = "api_codo_maton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# salvo = "*"
# tokio = { version = "1", features = ["macros"] }




[workspace]
members = [".", "api", "db", "migration", "queries", "auth"]


[dependencies]
api = { path = "api" }
db = { path = "db" }
migration = { path = "migration" }
queries = {path = "queries"}
auth = {path = "auth"}

[workspace.dependencies]
tokio = { version = "^1", features = ["macros"] }
futures = "^0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono" ] }
sea-orm-migration = "^0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"
bcrypt = "^0.14"